# 269-project

./: README.md  pyproject.toml
rope_control/: __init__.py  experiments.py  planners.py  sim.py  tasks.py  viz.py
scripts/: make_plots.py  run_experiments.py
