[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "differentiable-rope-control"
version = "0.1.0"
description = "Small JAX research repo for differentiable 2D bead-spring rope control."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "jax[cpu]>=0.4.28",
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "imageio>=2.34",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
include = ["rope_control*"]

